6_demoapp-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "demoapp-frontend"
  namespace: "prod"
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: "demoapp-frontend"
