6_demoapp-frontend/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "demoapp-frontend"
  namespace: "default"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: demoapp-frontend
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "demoapp-frontend"
              servicePort: 80
